2003-05-11  Kevin Vandersloot <kfv101@psu.edu>

	* modemlights.c, properties.c, modemlights.h: remove all global and static
	variables so multiple instances can work properly. Also bring back tooltip.
	Fixes bug #100007

2003-04-27  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify the preferences dialog. Also, hook up 
	the help button.

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* modemlights.c: (show_help_cb): update for screen-exec changes.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_ModemLightsApplet.server.in.in: added bugzilla attributtes

2002-12-02  Christian Neumair  <chris@gnome-de.org>

	* properties.c: Made tabs HIG compliant (removed mnemonics).

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* modemlights.c: (about_cb), (show_help_cb):
	* properties.c: (property_show): kill the HAVE_GTK_MULTIHEAD
	conditionals. We require gtk+ HEAD now.

2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against libscreen-exec.la.

	* modemlights.c: (show_help_cb):
	* properties.c: (phelp_cb): use the multiscreen
	gnome_help variants.

2002-07-18  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install applet into libexec.

	* GNOME_ModemLightsApplet.server.in: move .server.in to
	.server.in.in to allow for libexec dir substitution.

2002-07-11  Mark McLoughlin  <mark@skynet.ie>

	* modemlights.c: (about_cb):
	* properties.c: (property_show):
	realise dialogs on the same screen as the applet.

2002-07-11  Mark McLoughlin  <mark@skynet.ie>

	* modemlights.c:
	(about_cb): use gtk_window_present.
	(update_pixmaps): create the pixmap using a correct
	parent window.

	* properties.c: (property_show): use gtk_window_present.

2002-06-25  Kevin Vandersloot <kfv101@psu.edu>

	* properties.c: more gconf sanity checks. Fixes bug
	#84922

2002-06-08  Kjartan Maraas  <kmaraas@gnome.org>

	* properties.c: #include <config.h> to make it localized.
	
2002-06-03  Arvind Samptur <arvind.samptur@wipro.com>
