@@ -1,3 +1,7 @@
+2003-05-17  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* properties.c:  HIGify the action area of the preferences dialog.
+	
 2003-05-11  Kevin Vandersloot <kfv101@psu.edu>
 
 	* modemlights.c, properties.c, modemlights.h: remove all global and static
